--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,8 @@ table {
 	height: 100vh;
 	width: 100vw;
 	overflow: hidden;
+	height: -webkit-fill-available;
+	height: fill-available;
 }
 #header .header_top {
 	position: absolute;
@@ -463,6 +465,8 @@ table {
 	#header {
 		height: 100vh;
 		width: 100vw;
+		height: -webkit-fill-available;
+		height: fill-available;
 		overflow: hidden;
 	}
 	#header .header_top {
@@ -710,6 +714,8 @@ table {
 #section1 {
 	width: 100%;
 	height: 100vh;
+	height: -webkit-fill-available;
+	height: fill-available;
 	transition: all 1s;
 }
 #section1_bg {
@@ -912,6 +918,8 @@ table {
 	position: relative;
 	width: 100%;
 	height: 100vh;
+	height: -webkit-fill-available;
+	height: fill-available;
 	background: url(../images/section_02_bg.jpg) no-repeat center center;
 	background-size: cover;
 	overflow: hidden;
@@ -1061,6 +1069,8 @@ table {
 #section3 {
 	width: 100%;
 	height: 100vh;
+	height: -webkit-fill-available;
+	height: fill-available;
 	background: url(../images/section_03_bg.jpg) no-repeat center center;
 	background-size: cover;
 	position: relative;
@@ -1330,6 +1340,8 @@ table {
 #footer {
 	width: 100%;
 	height: 100vh;
+	height: -webkit-fill-available;
+	height: fill-available;
 	overflow: hidden;
 }
 #footer .footer_inner {
